ajustes de tamanhop na main_activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/paises"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <LinearLayout
-        android:id="@+id/Image_pais"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" />
-
-    <TextView
-        android:id="@+id/text_comida"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="Feijoada"
-        android:textColor="@android:color/black"
-        android:textFontWeight="1"
-        android:textSize="@dimen/texts"
-        tools:layout_editor_absoluteX="172dp"
-        tools:layout_editor_absoluteY="430dp"
-        tools:ignore="HardcodedText,MissingConstraints,UnusedAttribute" />
 
     <TextView
         android:id="@+id/nome_pais"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="Brasil"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/pais"
         android:textColor="@android:color/black"
-        android:textFontWeight="1"
-        android:textSize="@dimen/texts"
-        tools:layout_editor_absoluteX="172dp"
-        tools:layout_editor_absoluteY="45dp"
-        tools:ignore="MissingConstraints" />
+        android:textSize="@dimen/texts" />
 
     <ImageView
         android:id="@+id/image_pais"
         android:layout_width="@dimen/images"
         android:layout_height="0dp"
-        android:contentDescription="@string/content_pais"
-        android:textFontWeight="2"
-        app:srcCompat="@drawable/brasil"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="71dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:contentDescription="@string/pais"
+        app:srcCompat="@drawable/image_pais" />
 
     <ImageView
         android:id="@+id/comida_pais"
         android:layout_width="@dimen/images"
         android:layout_height="0dp"
-        android:contentDescription="@string/content_comida"
-        android:textFontWeight="2"
-        app:srcCompat="@drawable/feijoada"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="242dp"
-        tools:ignore="MissingConstraints" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:contentDescription="@string/comida"
+        app:srcCompat="@drawable/image_comida" />
+
+    <TextView
+        android:id="@+id/text_comida"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/comida"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/texts" />
+</LinearLayout>
